--- a/notebooks/code_test.ipynb
+++ b/notebooks/code_test.ipynb
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 75,
    "id": "21ee8b08",
    "metadata": {},
    "outputs": [
@@ -162,7 +162,7 @@
        "<module 'data.db_utils' from 'D:\\\\PersonalFiles\\\\Development\\\\Git Projects\\\\data-analytics-portfolio\\\\trading-signal\\\\data\\\\db_utils.py'>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,12 +196,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "id": "42f98b86",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# dbu.init_db(conn) # 初始化几张表"
+    "dbu.init_db(conn) # 初始化几张表"
    ]
   },
   {
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "id": "94d48cec",
    "metadata": {},
    "outputs": [
@@ -402,8 +402,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-08-20 20:00:00\n",
-      "pred_hist_df.shape: (167, 3)\n"
+      "2025-08-22 01:00:00\n",
+      "pred_hist_df.shape: (167, 4)\n"
      ]
     }
    ],
@@ -423,6 +423,77 @@
   },
   {
    "cell_type": "markdown",
+   "id": "eac1049d",
+   "metadata": {},
+   "source": [
+    "#### 历史预测存入predictions表"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "a4ac512e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dbu.upsert_df(pred_hist_df.reset_index(), 'predictions', conn)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f43f19be",
+   "metadata": {},
+   "source": [
+    "#### 获取predictions表里的最大datetime\n",
+    "填充缺失的预测"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "557b55bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2025-08-28 19:00:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "max_dt = dbu.get_last_timestamp(conn, table='predictions')\n",
+    "print(max_dt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "61dc8b29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred_fill_df = pipeline.backfill_predictions_from(handler=handler,\n",
+    "                                                  start_str=max_dt, \n",
+    "                                                  symbols=load_symbols,\n",
+    "                                                  target=target, \n",
+    "                                                  buffer_windows=300,\n",
+    "                                                  train_windows=24*7*4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "fb2f4e9c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dbu.upsert_df(pred_fill_df.reset_index(), 'predictions', conn)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "83ff846b",
    "metadata": {},
    "source": [
@@ -431,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 32,
    "id": "142f40f2",
    "metadata": {},
    "outputs": [
@@ -439,7 +510,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-08-27 22:00:00\n"
+      "2025-08-28 11:00:00\n"
      ]
     }
    ],
@@ -487,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "id": "71edec1c",
    "metadata": {},
    "outputs": [
@@ -495,18 +566,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'timestamp': Timestamp('2025-08-28 00:00:00'), 'y_pred': -0.0020000502638864164}\n"
+      "    symbol             datetime  predicted model_name\n",
+      "0  ETHUSDT  2025-08-29 00:00:00   0.000083     rf-reg\n"
      ]
     }
    ],
    "source": [
     "# 只一步\n",
-    "out = pipeline.predict_latest(handler=handler,\n",
+    "latest = pipeline.predict_latest(handler=handler,\n",
     "                              symbols=load_symbols,\n",
     "                             target=target,\n",
     "                             buffer_windows=300,\n",
     "                             train_windows=24*7*4)\n",
-    "print(out)"
+    "print(latest)"
    ]
   },
   {
@@ -514,16 +586,150 @@
    "id": "c002ed95",
    "metadata": {},
    "source": [
-    "#### 存入predictions表"
+    "#### 最后一条存入predictions表"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "id": "f2a8adee",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dbu.upsert_df(latest, 'predictions', conn)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f2409ca",
+   "metadata": {},
+   "source": [
+    "#### 从predition表生成信号"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "bcb7a870",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 取近期历史预测\n",
+    "until_dt = (\n",
+    "    pd.Timestamp.now(tz=timezone.utc)   # 带UTC时区的 pandas Timestamp\n",
+    "      .floor('H')                       # 对齐到整点\n",
+    "      .tz_convert(None)                 # 去时区，变“naive UTC”\n",
+    ")\n",
+    "hist_pred = dbu.fetch_predictions_history(conn, symbol=target, until_dt=until_dt, lookback_hours=24*5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "85f0efeb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 获取近期价格数据\n",
+    "start_dt = (hist_pred.index.min() - pd.Timedelta(hours=24)).strftime('%Y-%m-%d %H:%M:%S')\n",
+    "price_hist = load_multi_symbol_data(handler, symbols=load_symbols, start_str=start_dt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "3b4deb57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 生成信号\n",
+    "from pipeline import signal_config\n",
+    "\n",
+    "pred_df = hist_pred.copy()\n",
+    "pred_df.index.name = 'datetime'\n",
+    "# pred_df = pred_df.reset_index()\n",
+    "pred_df['symbol'] = target\n",
+    "\n",
+    "df_signal = (\n",
+    "    SignalGenerator(config=signal_config)\n",
+    "    .load_data(pred_df=pred_df, price_df=price_hist)\n",
+    "    .merge_pred_price(target_symbol=target)\n",
+    "    .zscore_normalize()\n",
+    "    .compute_raw_signal()\n",
+    "    .apply_atr_volatility_filter()\n",
+    "    .compute_positions()\n",
+    "    .compute_reversals()\n",
+    "    .apply_min_signal_spacing(min_space=2)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "c8dec718",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "DatetimeIndex: 120 entries, 2025-08-24 01:00:00 to 2025-08-29 00:00:00\n",
+      "Data columns (total 14 columns):\n",
+      " #   Column           Non-Null Count  Dtype  \n",
+      "---  ------           --------------  -----  \n",
+      " 0   predicted        120 non-null    float64\n",
+      " 1   symbol           120 non-null    object \n",
+      " 2   open             120 non-null    float64\n",
+      " 3   high             120 non-null    float64\n",
+      " 4   low              120 non-null    float64\n",
+      " 5   close            120 non-null    float64\n",
+      " 6   volume           120 non-null    float64\n",
+      " 7   zscore           97 non-null     float64\n",
+      " 8   raw_signal       120 non-null    int64  \n",
+      " 9   vol_filter       120 non-null    bool   \n",
+      " 10  filtered_signal  120 non-null    int64  \n",
+      " 11  position         120 non-null    int64  \n",
+      " 12  signal_reversal  120 non-null    int64  \n",
+      " 13  final_signal     120 non-null    int64  \n",
+      "dtypes: bool(1), float64(7), int64(5), object(1)\n",
+      "memory usage: 17.3+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_signal.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "f8a11247",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_signal['model_name'] = MODEL_NAME\n",
+    "df_signal['strategy_name'] = STRATEGY_NAME\n",
+    "df_signal['actuals'] = df_signal['close'].shift(-1) / df_signal['close'] - 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "69aa2b10",
+   "metadata": {},
+   "source": [
+    "#### 信号插入signals库表"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "419e31a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dbu.upsert_df(df_signal.reset_index(),'signals', conn)"
+   ]
   },
   {
    "cell_type": "markdown",
