first running version

--- a/notebooks/code_test.ipynb
+++ b/notebooks/code_test.ipynb
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 109,
    "id": "21ee8b08",
    "metadata": {},
    "outputs": [
@@ -162,7 +162,7 @@
        "<module 'data.db_utils' from 'D:\\\\PersonalFiles\\\\Development\\\\Git Projects\\\\data-analytics-portfolio\\\\trading-signal\\\\data\\\\db_utils.py'>"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 98,
    "id": "39cd3079",
    "metadata": {},
    "outputs": [],
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 143,
    "id": "a4ac512e",
    "metadata": {},
    "outputs": [],
@@ -444,13 +444,12 @@
    "id": "f43f19be",
    "metadata": {},
    "source": [
-    "#### 获取predictions表里的最大datetime\n",
-    "填充缺失的预测"
+    "#### 填充缺失的预测"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 113,
    "id": "557b55bf",
    "metadata": {},
    "outputs": [
@@ -458,7 +457,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-08-28 19:00:00\n"
+      "2025-09-01 23:00:00\n"
      ]
     }
    ],
@@ -469,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 114,
    "id": "61dc8b29",
    "metadata": {},
    "outputs": [],
@@ -484,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 115,
    "id": "fb2f4e9c",
    "metadata": {},
    "outputs": [],
@@ -558,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 134,
    "id": "71edec1c",
    "metadata": {},
    "outputs": [
@@ -567,7 +566,7 @@
      "output_type": "stream",
      "text": [
       "    symbol             datetime  predicted model_name\n",
-      "0  ETHUSDT  2025-08-29 00:00:00   0.000083     rf-reg\n"
+      "0  ETHUSDT  2025-09-02 14:00:00   0.000078     rf-reg\n"
      ]
     }
    ],
@@ -591,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 135,
    "id": "f2a8adee",
    "metadata": {},
    "outputs": [],
@@ -604,28 +603,63 @@
    "id": "1f2409ca",
    "metadata": {},
    "source": [
-    "#### 从predition表生成信号"
+    "#### 生成Signals"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 130,
+   "id": "8b6ae6c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'data.db_utils' from 'D:\\\\PersonalFiles\\\\Development\\\\Git Projects\\\\data-analytics-portfolio\\\\trading-signal\\\\data\\\\db_utils.py'>"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "importlib.reload(pipeline)\n",
+    "importlib.reload(dbu)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
    "id": "bcb7a870",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27\n"
+     ]
+    }
+   ],
    "source": [
     "# 取近期历史预测\n",
+    "start_str = dbu.get_last_timestamp(conn, table='signals')\n",
     "until_dt = (\n",
     "    pd.Timestamp.now(tz=timezone.utc)   # 带UTC时区的 pandas Timestamp\n",
     "      .floor('H')                       # 对齐到整点\n",
     "      .tz_convert(None)                 # 去时区，变“naive UTC”\n",
     ")\n",
-    "hist_pred = dbu.fetch_predictions_history(conn, symbol=target, until_dt=until_dt, lookback_hours=24*5)"
+    "lookback_hours = int(np.ceil((until_dt - pd.to_datetime(start_str)).total_seconds() / 3600.0)) + 24\n",
+    "print(lookback_hours)\n",
+    "hist_pred = dbu.fetch_predictions_history(conn, \n",
+    "                                          symbol=target, \n",
+    "                                          lookback_hours=lookback_hours)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 118,
    "id": "85f0efeb",
    "metadata": {},
    "outputs": [],
@@ -637,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 121,
    "id": "3b4deb57",
    "metadata": {},
    "outputs": [],
@@ -660,12 +694,14 @@
     "    .compute_positions()\n",
     "    .compute_reversals()\n",
     "    .apply_min_signal_spacing(min_space=2)\n",
-    ")"
+    ")\n",
+    "\n",
+    "df_signal.dropna(inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 122,
    "id": "c8dec718",
    "metadata": {},
    "outputs": [
@@ -674,26 +710,26 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "DatetimeIndex: 120 entries, 2025-08-24 01:00:00 to 2025-08-29 00:00:00\n",
+      "DatetimeIndex: 16 entries, 2025-09-01 22:00:00 to 2025-09-02 13:00:00\n",
       "Data columns (total 14 columns):\n",
       " #   Column           Non-Null Count  Dtype  \n",
       "---  ------           --------------  -----  \n",
-      " 0   predicted        120 non-null    float64\n",
-      " 1   symbol           120 non-null    object \n",
-      " 2   open             120 non-null    float64\n",
-      " 3   high             120 non-null    float64\n",
-      " 4   low              120 non-null    float64\n",
-      " 5   close            120 non-null    float64\n",
-      " 6   volume           120 non-null    float64\n",
-      " 7   zscore           97 non-null     float64\n",
-      " 8   raw_signal       120 non-null    int64  \n",
-      " 9   vol_filter       120 non-null    bool   \n",
-      " 10  filtered_signal  120 non-null    int64  \n",
-      " 11  position         120 non-null    int64  \n",
-      " 12  signal_reversal  120 non-null    int64  \n",
-      " 13  final_signal     120 non-null    int64  \n",
+      " 0   predicted        16 non-null     float64\n",
+      " 1   symbol           16 non-null     object \n",
+      " 2   open             16 non-null     float64\n",
+      " 3   high             16 non-null     float64\n",
+      " 4   low              16 non-null     float64\n",
+      " 5   close            16 non-null     float64\n",
+      " 6   volume           16 non-null     float64\n",
+      " 7   zscore           16 non-null     float64\n",
+      " 8   raw_signal       16 non-null     int64  \n",
+      " 9   vol_filter       16 non-null     bool   \n",
+      " 10  filtered_signal  16 non-null     int64  \n",
+      " 11  position         16 non-null     int64  \n",
+      " 12  signal_reversal  16 non-null     int64  \n",
+      " 13  final_signal     16 non-null     int64  \n",
       "dtypes: bool(1), float64(7), int64(5), object(1)\n",
-      "memory usage: 17.3+ KB\n"
+      "memory usage: 1.8+ KB\n"
      ]
     }
    ],
@@ -703,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 123,
    "id": "f8a11247",
    "metadata": {},
    "outputs": [],
@@ -711,6 +747,43 @@
     "df_signal['model_name'] = MODEL_NAME\n",
     "df_signal['strategy_name'] = STRATEGY_NAME\n",
     "df_signal['actuals'] = df_signal['close'].shift(-1) / df_signal['close'] - 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "id": "e1750d65",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2025-09-02 14:00:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 封装后的\n",
+    "# conn, handler = pipeline.ensure_db_initialized()\n",
+    "\n",
+    "start_str = dbu.get_last_timestamp(conn, table='signals')\n",
+    "print(start_str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "id": "a5baaae6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 补全缺失的信号\n",
+    "sig_all = pipeline.generate_signals_from_predictions(\n",
+    "    handler=handler,\n",
+    "    conn=conn,\n",
+    "    start_str=start_str\n",
+    ")"
    ]
   },
   {
@@ -723,12 +796,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 149,
    "id": "419e31a5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dbu.upsert_df(df_signal.reset_index(),'signals', conn)"
+    "dbu.upsert_df(sig_all,'signals', conn)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf2c18c8",
+   "metadata": {},
+   "source": [
+    "#### 根据缺失，进行预测，再生成信号"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "id": "854671c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Timestamp('2025-09-02 19:00:00+0000', tz='UTC')"
+      ]
+     },
+     "execution_count": 170,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.Timestamp.utcnow().floor('H')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "id": "f211a1ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Timestamp('2025-09-02 18:00:00')"
+      ]
+     },
+     "execution_count": 171,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.to_datetime(dbu.get_last_timestamp(conn, table='predictions'), utc=True).tz_convert(None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "id": "8b88553a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 days 01:25:15.535488\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1.4209820800000001"
+      ]
+     },
+     "execution_count": 174,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gap = pd.Timestamp.utcnow() - pd.to_datetime(dbu.get_last_timestamp(conn, table='predictions'), utc=True)\n",
+    "print(gap)\n",
+    "\n",
+    "gap.total_seconds() / 3600.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5a0cc84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max_dt = dbu.get_last_timestamp(conn, table='predictions')\n",
+    "# 补全缺失的预测\n",
+    "pred_fill_df = pipeline.backfill_predictions_from(handler=handler,\n",
+    "                                                  start_str=max_dt, \n",
+    "                                                  symbols=load_symbols,\n",
+    "                                                  target=target, \n",
+    "                                                  buffer_windows=300,\n",
+    "                                                  train_windows=24*7*4)\n",
+    "dbu.upsert_df(pred_fill_df, 'predictions', conn)\n",
+    "\n",
+    "start_str = dbu.get_last_timestamp(conn, table='signals')\n",
+    "# 补全缺失的信号\n",
+    "sig_all = pipeline.generate_signals_from_predictions(\n",
+    "    handler=handler,\n",
+    "    conn=conn,\n",
+    "    start_str=start_str\n",
+    ")\n",
+    "dbu.upsert_df(sig_all,'signals', conn)"
    ]
   },
   {
